<?xml version="1.0"?>
<package format="3">
  <name>vdb_edt</name>
  <version>0.0.0</version>
  <description>The vdb_edt package</description>

  <maintainer email="zhudelong@todo.todo">zhudelong</maintainer>
  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <depend>message_filters</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <depend>pcl_conversions</depend>

  <depend>openvdb</depend>

  <depend>eigen</depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
